--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "14.1.4",
     "next-themes": "^0.3.0",
     "react": "^18",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.1",
     "react-redux": "^9.1.0",
